[gd_scene load_steps=9 format=2]

[ext_resource path="res://hud/system/details.gd" type="Script" id=1]
[ext_resource path="res://themes/theme_main_square_button.tres" type="Theme" id=2]
[ext_resource path="res://hud/wallet.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/container_circular.gd" type="Script" id=4]
[ext_resource path="res://gui/circular_button.gd" type="Script" id=5]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/fleet.png-7b3afe225b29b788c820a5d01173695d.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/building.png-575a86400ef01fa266a76efe431146c8.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/picto_syteme_1_neutral.png-aafcc6ffed038c32f94131da380f45fb.stex"

[node name="SystemDetails" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallet" parent="." instance=ExtResource( 3 )]
margin_top = 1048.0
margin_right = 160.0
margin_bottom = 1080.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 8

[node name="MenuSystem" type="HBoxContainer" parent="."]
margin_left = 164.0
margin_right = 1732.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="."]
margin_left = 1736.0
margin_right = 1766.0
margin_bottom = 1080.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 2

[node name="System" type="VBoxContainer" parent="."]
margin_left = 1770.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_stretch_ratio = 0.2
theme = ExtResource( 2 )
alignment = 2

[node name="CircularContainer" type="Container" parent="System"]
margin_top = 930.0
margin_right = 150.0
margin_bottom = 1080.0
rect_min_size = Vector2( 150, 150 )
mouse_filter = 1
size_flags_vertical = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
angle_start_offset = -10.0
angle_end_offset = 10.0
radius_ratio = 1.0
anchor_position = 8
aspect_ratio_force = true
clip_center_node = false

[node name="Fleet" type="Control" parent="System/CircularContainer"]
margin_right = 240.0
margin_bottom = 240.0
script = ExtResource( 5 )
angle_start = 170.0
angle_end = 225.0
radius_out = 1.0
radius_in = 0.25
does_border_scale = false
base_style = null
hover_style = null
selected_style = null
focus_style = null
texture = SubResource( 1 )
texture_size = Vector2( 32, 32 )

[node name="Bluilding" type="Control" parent="System/CircularContainer"]
margin_right = 240.0
margin_bottom = 240.0
script = ExtResource( 5 )
angle_start = 225.0
angle_end = 280.0
radius_out = 1.0
radius_in = 0.25
does_border_scale = false
base_style = null
hover_style = null
selected_style = null
focus_style = null
texture = SubResource( 2 )
texture_size = Vector2( 32, 32 )

[node name="ContainerSystem" type="VBoxContainer" parent="System/CircularContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -60.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2

[node name="PlayerName" type="Label" parent="System/CircularContainer/ContainerSystem"]
visible = false
margin_right = 180.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "no_translate.player_name"
align = 1

[node name="TextureRect" type="TextureRect" parent="System/CircularContainer/ContainerSystem"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true
stretch_mode = 6
